# telco-customer-churn

./: .gitignore  Pipfile  README.md  description.md  pyproject.toml  requirements.txt  telco-customer-churn-mssql.ipynb  telco-customer-churn.ipynb
