[project]
name = "telco-customer-churn"
version = "0.1.0"
description = "A simple, but a bit tricky modelling task, based on telecom customer churn dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=0.23",
    "numpy>=1.14",
    "scikit-learn>=0.19",
    "seaborn>=0.8",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]

